# olog-debate

./: .gitmodules  Cargo.toml  inductive_data_gen.py
data/: graph_inf.txt  graph_tr.txt
src/: main.rs  nougat_ocr.py
src/res/: olog-pdf.md  olog.md
