[package]
name = "olog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.1", features = ["v4"] }
openai-api-rs = "2.1.7"
serde_json = "1.0.1"
serde = "1.0.193"
pyo3 = { version = "0.20.1", features = ["extension-module"] }

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
