[package]
name = "olog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.1", features = ["v4"] }
openai-api-rs = "2.1.7"
serde_json = "1.0.1"
serde = "1.0.193"
rusqlite = "0.30.0"
clap="3.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }